[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajat Natani",email = "rajatnatani0123@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]
